--- a/public/.htaccess
+++ b/public/.htaccess
@@ -41,7 +41,7 @@ Options All -Indexes
 <IfModule !mod_rewrite.c>
 	# If we don't have mod_rewrite installed, all 404's
 	# can be sent to index.php, and everything works as normal.
-	ErrorDocument 404 index.php
+	ErrorDocument 404 index.php?no_activo_mod_rewrite
 </IfModule>
 
 # Disable server signature start
